# Parsing-Test-Task

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
test_parser/: data_storage.py  main.py  settings.py
